--- a/shpesfba/templates/shpesfba/memberships.html
+++ b/shpesfba/templates/shpesfba/memberships.html
@@ -13,7 +13,11 @@
             <h1>Membership Classification</h1>
 
             <p>Below is a listing of all available membership types. <a href="https://www.shpeconnect.org" target="_blank">Click here to apply</a></p>
-
+            <p>
+                Membership is open to all individuals who believe in the mission and goals set forth by the organization. SF Bay Area SHPE does 
+                not discriminate based on occupation, ethnicity, or any other classification. The chapter welcomes individuals and corporations 
+                alike to join together to fufill the mission and goals of SF Bay Area SHPE.
+            </p>
             {% for membership in memberships %}
                 <div class="row">
                     <div class="membershipLevel col-sm-12">
