--- a/static/css/shpe.css
+++ b/static/css/shpe.css
@@ -42,7 +42,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 #shpenavbar ul.navbar-nav li > a{
-    line-height: 60px;
+    line-height: 50px;
 }
 
 #shpelogo{
@@ -53,10 +53,11 @@ h1, h2, h3, h4, h5, h6 {
 
 }
 #shpelogo > img{
-    width: 100%;
+    width: 90%;
 }
 .social-link {
     line-height:30px;
+    padding: 5px;
 }
 .social-link img {
     margin-right: 10px;
@@ -703,23 +704,31 @@ a.navigation {
           background-size: cover;
 }
 
-.bottom-line{
+.section-line {
 	width: 25px;
 	height: 3px;
 	background-color: #4B4B4C;
 }
 
-.fea{
+/* Homepage Features
+ ===========================================
+*/ 
+.feature {
 	margin-top: 25px;
 }
-.fea-img {
-  width: 20%;
-}
-.fea i {
-    font-size: 39px;
-    color: #1a3851;
-    margin-top: 7px;
-}
+
+@media only screen and (max-width: 328px) {
+    .feature img {
+        width: 80%;
+         
+    }
+ }
+
+@media only screen and (min-width: 328px) {
+    .feature img {
+        width: 280px;
+    }
+ }
 
 /* Custom Buttons
  ===========================================
@@ -770,13 +779,23 @@ a.navigation {
     position: relative;
 }
 
-.banner-text {
-    text-align: center;
-    color: #fff;
-    margin-top: 30%;
-}
+@media only screen and (max-width: 667px) {
+    .banner-text {
+        text-align: center;
+        color: #fff;
+        margin-top: 60%;
+    }
+ }
+
+@media only screen and (min-width: 667px) {
+    .banner-text {
+        text-align: center;
+        color: #fff;
+        margin-top: 30%;
+    }
+ }
 
 .bg-color {
-	background-color: rgba(12, 11, 11, 0.4);
+	background-color: rgba(12, 11, 11, 0.5);
 	min-height: 480px;
 }
