Add sticky footer

--- a/shpesfba/templates/shpesfba/contact.html
+++ b/shpesfba/templates/shpesfba/contact.html
@@ -90,7 +90,7 @@
                             <textarea id="message" name="message" class="form-control" rows="8">{{ form.message.value|default_if_none:"" }}</textarea>
                         </div>
                         <div class="form-group">
-                            <input type="submit" class="btn btn-primary"/>
+                            <input type="submit" class="btn btn-shpe"/>
                         </div>
                     </fieldset>
                 </form>
