Add mail chimp mailing form

--- a/shpesfba/templates/shpesfba/home.html
+++ b/shpesfba/templates/shpesfba/home.html
@@ -91,7 +91,7 @@
                         <a class="btn btn-default btn-shpe" href="https://www.facebook.com/groups/120819351271743/" target="_blank" data-toggle="tooltip" title="Facebook"><i class="fa fa-lg fa-facebook-official" aria-hidden="true"></i></a>
                         <a class="btn btn-default btn-shpe" href="https://www.instagram.com/shpesfba/" target="_blank" data-toggle="tooltip" title="Instagram"><i class="fa fa-lg fa-instagram" aria-hidden="true"></i></a>
                         <a class="btn btn-default btn-shpe" href="https://join.slack.com/t/shpe-sfba/shared_invite/MjI0OTQ2MDAxOTc0LTE1MDIyNDUxNTctMGRkZDRiYmJlNg" target="_blank" data-toggle="tooltip" title="Slack"><i class="fa fa-lg fa-slack" aria-hidden="true"></i></a>
-                        <a class="btn btn-default btn-shpe" href="{% url "contact" %}" target="_blank" data-toggle="tooltip" title="Join Mailing List"><i class="fa fa-lg fa-envelope-o" aria-hidden="true"></i></a>
+                        <a class="btn btn-default btn-shpe" href="{% url "contact.mailing-list" %}" data-toggle="tooltip" title="Join Mailing List"><i class="fa fa-lg fa-envelope-o" aria-hidden="true"></i></a>
                     </div>
                 </div>
                 <div class="row">
