--- a/shpesfba/templates/shpesfba/base.html
+++ b/shpesfba/templates/shpesfba/base.html
@@ -8,7 +8,7 @@
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
     <title>{% block title %}{% endblock %} - SHPE SF Bay Area</title>
     <link rel="stylesheet" href="{% static "css/bootstrap.min.css" %}"/>
-    <link rel="stylesheet" href="{% static "css/shpe.css" %}?v=2"/>
+    <link rel="stylesheet" href="{% static "css/shpe.css" %}?v=3"/>
     <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Open+Sans|Candal|Alegreya+Sans">
     <link rel="stylesheet" href="/static/fonts/font-awesome-4.7.0/css/font-awesome.min.css">
 
@@ -51,7 +51,7 @@
             <a class="social-link" href="https://www.facebook.com/groups/120819351271743/" target="_blank"><i class="fa fa-3x fa-facebook-official" aria-hidden="true"></i></a>
             <a class="social-link" href="https://www.instagram.com/shpesfba/" target="_blank"><i class="fa fa-3x fa-instagram" aria-hidden="true"></i></a>
             <a class="social-link" href="https://join.slack.com/t/shpe-sfba/shared_invite/MjI0OTQ2MDAxOTc0LTE1MDIyNDUxNTctMGRkZDRiYmJlNg" target="_blank"><i class="fa fa-3x fa-slack" aria-hidden="true"></i></a>
-            <a class="social-link" href="{% url "contact" %}" target="_blank" data-toggle="tooltip" title="Join Mailing List"><i class="fa fa-3x fa-envelope-o" aria-hidden="true"></i></a>
+            <a class="social-link" href="{% url "contact" %}" data-toggle="tooltip" title="Contact Us"><i class="fa fa-3x fa-envelope-o" aria-hidden="true"></i></a>
         </div>
     </div>
     <div class="row">
