Update homepage image

--- a/static/css/shpe.css
+++ b/static/css/shpe.css
@@ -765,7 +765,7 @@ a.navigation {
  ===========================================
 */ 
 .banner {
-	background: url('images/home_group.jpg') no-repeat center top;
+	background: url('images/home_group2.jpg') no-repeat center top;
     background-size: cover;
 	min-height: 480px;
     position: relative;
