--- a/shpesfba/templates/shpesfba/home.html
+++ b/shpesfba/templates/shpesfba/home.html
@@ -7,8 +7,9 @@
     <div class="banner">
       <div class="bg-color">
         <div class="container">
-          <div class="row">
+          <div class="row text-center">
               <h1 class="banner-text">San Francisco Bay Area<br/>Society of Hispanic Professional Engineers</h1>
+              <a href="{% url "membership" %}" class="btn btn-banner">Become a Member</a>
           </div>
         </div>
       </div>
@@ -17,8 +18,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-12">
-                <h1 class="text-center">Mission</h1>
-                <p class="text-center">
+                <p class="text-center mission-text">
                     Providing professional, educational and cultural support that advance our members'
                     lives and careers.
                 </p>
@@ -31,7 +31,7 @@
                 <div class="row">
                     <div class="col-sm-12 col-md-4 feature text-center">
                         <h4>Outreach & Community Service</h4>
-                            <img class="img-rounded" src="/static/img/home/outreach.jpg"/>
+                        <a href="{% url "about" %}"><img class="img-rounded" src="/static/img/home/outreach.jpg"/></a>
                         <p>
                         We are always looking for new ways to engage with students, parents, 
                         educators, and other members of our community
@@ -39,7 +39,7 @@
                     </div>
                     <div class="col-sm-12 col-md-4 feature text-center">
                         <h4>Professional Development</h4>
-                        <img class="img-rounded" src="/static/img/home/prof-dev.jpg"/>
+                        <a href="{% url "about" %}"><img class="img-rounded" src="/static/img/home/prof-dev.jpg"/></a>
                         <p>
                         We host regular events that develop our members’ skills so that they can succeed in 
                         the workplace
@@ -47,7 +47,7 @@
                     </div>
                     <div class="col-sm-12 col-md-4 feature text-center">
                         <h4>Chapter Development</h4>
-                            <img class="img-rounded" src="/static/img/home/chapter-dev.JPG"/>
+                        <a href="{% url "about" %}"><img class="img-rounded" src="/static/img/home/chapter-dev.JPG"/></a>
                         <p>
                         We engage in networking events with other organizations in the bay area, mixers 
                         at a variety of companies, and competitive sports
