Redesign membership page

--- a/shpesfba/templates/shpesfba/base.html
+++ b/shpesfba/templates/shpesfba/base.html
@@ -68,11 +68,7 @@
 
 <script src="{% static "js/jquery-3.1.0.min.js" %}"></script>
 <script src="{% static "js/bootstrap.min.js" %} "></script>
-<script>
-    $(document).ready(function(){
-        $('[data-toggle="tooltip"]').tooltip(); 
-    });
-</script>
+<script src="{% static "js/shpe.js" %} "></script>
 {% block scripts %}
 {% endblock %}
 </body>
