--- a/shpesfba/templates/shpesfba/home.html
+++ b/shpesfba/templates/shpesfba/home.html
@@ -66,12 +66,14 @@
         </section>
 
         <div class="row">
-            <div class="col-md-6 text-center">
+            <div class="col-sm-12 col-md-6">
                 <h1 class="text-center">Upcoming Events</h1>
-                <a href="https://www.eventbrite.com/o/shpe-san-francisco-bay-area-14833371820" target="_blank">
-                    Check our Eventbrite profile to view and register for events
-                </a>
-                <!-- {% if events %}
+                <p class="text-center">
+                    <a href="https://www.eventbrite.com/o/shpe-san-francisco-bay-area-14833371820" target="_blank">
+                    Visit our Eventbrite profile to view and register for events
+                    </a>
+                </p>
+                {% if events %}
                     {% for event in events %}
                         <h4><a href="https://facebook.com/events/{{ event.fb_id }}" target="_blank">{{ event.title }}
                             <small>{{ event.date | date:'N j, g:i A' }} at {{ event.location }}</small>
@@ -81,13 +83,13 @@
                     {% endfor %}
                 {% else %}
                     <p class="text-center"><em>No upcoming events</em></p>
-                {% endif %} -->
+                {% endif %}
                 <p class="text-center">
                 <a href="{% url 'calendar' %}" class="btn btn-default btn-shpe">View Calendar</a>
                 <a href="{% url 'about.past-events' %}" class="btn btn-default btn-shpe">View Past Events</a>
                 </p>
             </div>
-            <div class="col-md-6 text-center">
+            <div class="col-sm-12 col-md-6 text-center">
                 <h1 class="text-center">Get in Touch</h1>
                 <div class="row">
                     <div class="col-xs-12">
