--- a/shpesfba/templates/shpesfba/base.html
+++ b/shpesfba/templates/shpesfba/base.html
@@ -69,6 +69,16 @@
 <script src="{% static "js/jquery-3.1.0.min.js" %}"></script>
 <script src="{% static "js/bootstrap.min.js" %} "></script>
 <script src="{% static "js/shpe.js" %} "></script>
+
+<script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+  
+    ga('create', 'UA-106395038-1', 'auto');
+    ga('send', 'pageview');
+</script>
 {% block scripts %}
 {% endblock %}
 </body>
