--- a/shpesfba/templates/shpesfba/base.html
+++ b/shpesfba/templates/shpesfba/base.html
@@ -8,7 +8,7 @@
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
     <title>{% block title %}{% endblock %} - SHPE SF Bay Area</title>
     <link rel="stylesheet" href="{% static "css/bootstrap.min.css" %}"/>
-    <link rel="stylesheet" href="{% static "css/shpe.css" %}?v=1"/>
+    <link rel="stylesheet" href="{% static "css/shpe.css" %}?v=2"/>
     <link rel="stylesheet" href="{% static "css/nav.css" %}?"/>
     <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Open+Sans|Candal|Alegreya+Sans">
     <link rel="stylesheet" href="/static/fonts/font-awesome-4.7.0/css/font-awesome.min.css">
@@ -17,7 +17,6 @@
     {% endblock %}
 </head>
 <body>
-
 <header id="header">
     <div class="container">
         <div id="logo" class="pull-left">
@@ -36,7 +35,7 @@
                 <li class="{% nav_active 'contact' 'active' %}"><a href="{% url "contact" %}">Contact</a></li>
             </ul>
         </nav>
-        <nav class="nav social-nav pull-right hidden-sm-down">
+        <nav class="nav social-nav pull-right hidden-sm hidden-xs">
             <a href="https://www.facebook.com/groups/120819351271743/" target="_blank"><i class="fa fa-facebook-official" aria-hidden="true"></i></a>
             <a href="https://join.slack.com/t/shpe-sfba/shared_invite/MjI0OTQ2MDAxOTc0LTE1MDIyNDUxNTctMGRkZDRiYmJlNg" target="_blank"><i class="fa fa-slack" aria-hidden="true"></i></a>
             <a href="https://www.instagram.com/shpesfba/" target="_blank"><i class="fa fa-instagram" aria-hidden="true"></i></a>
